bin/css/style.css
/* ... */
.content-header,
.content-body,
.content-template,
.control-template {
    margin-top: 3rem;
    margin-bottom: 3rem;
}

.content-short:not(:last-child),
.control-content:not(:last-child),
.control-body:not(:last-child) {
    margin-bottom: 3rem;
}

.page-footer .control-content:not(:last-child) {
    margin-bottom: var(--qui-row-spacing--small);
}

.main-content:where([role="main"]) {
    margin-top: var(--qui-tpl-spacing--top);
    margin-bottom: var(--qui-tpl-spacing--bottom);
}

.control-header {
    margin-bottom: 3rem;
    text-align: center;
}

/** icon toTop
 * ========================================================== */

.toTop {
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    font-size: 1.5em;
    opacity: 0.3;
    z-index: 10;
    transform: scale(0);
    border-radius: 10px;
    min-width: 44px;
    min-height: 44px;
    display: grid;
    place-items: center;
    color: #fff;
}

.toTop__show {
    transform: scale(1);
}

.toTop:hover {
    opacity: 1;
}

/*********************************************************************************/
/* Nav style (in sidebar) navigation
/*********************************************************************************/

h2.quiqqer-navigation-title-style {
    color: #5d5d5d;
    font-weight: bold;
    margin-bottom: 0.5em;
    padding-left: 10px;
}

.quiqqer-navigation-level-1 > li {
    border-bottom: 1px solid #ddd;
}

.quiqqer-sidebar-dropdown-navigation .quiqqer-navigation-level-1 a,
.quiqqer-sidebar-dropdown-navigation a.quiqqer-navigation-firstpage {
    color: #5d5d5d;
    text-decoration: none;
}

.quiqqer-sidebar-dropdown-navigation .quiqqer-navigation-open,
.quiqqer-sidebar-dropdown-navigation .quiqqer-navigation-close {
    position: relative;
}

.quiqqer-fa-levels-icon:hover,
.quiqqer-navigation-level-1 a:hover,
a.quiqqer-navigation-home:hover,
.quiqqer-navigation-entry:hover .quiqqer-fa-list-icon {
    color: var(--qui-colors-primary);
}

/** responsive
 **************************************************/

@media screen and (max-width: 1024px) and (min-width: 768px) {
    li.nav-button-close {
        display: block !important;
    }
}

/*********************************************************************************/
/* pagination
/*********************************************************************************/
.quiqqer-sheets-desktop {
    text-align: center;
}

.quiqqer-sheets-desktop a,
.quiqqer-sheets-desktop span {
    border-radius: 3px;
    color: #5d5d5d;
    float: none;
    margin-right: 2px !important;
    padding: 0 15px;
}

.quiqqer-sheets-desktop a:hover {
    background-color: var(--qui-colors-primary);
    border: 1px solid var(--qui-colors-primary);
    color: #fff;
}

.quiqqer-sheets-desktop .quiqqer-sheets-desktop-current {
    background: #D9D6D7;
    border: 1px solid #D9D6D7;
    border-radius: 3px;
    color: #333;
}

.quiqqer-sheets-desktop-disabled {
    border-color: #ccc !important;
    color: #ccc !important;
}

.quiqqer-pagination .quiqqer-sheets-desktop:last-child {
    margin: 40px 0;
}

.quiqqer-sheets-mobile select {
    margin-bottom: 20px;
    margin-top: 20px;
}

/*********************************************************************************/
/* gallery
/*********************************************************************************/
.quiqqer-gallery-grid-entry {
    padding: 0;
}

.quiqqer-gallery-grid .control-background {
    background: none;
}

.quiqqer-gallery-grid-entry .quiqqer-gallery-grid-entry-text {
    padding: 10px 0;
    text-align: center;
}

/*********************************************************************************/
/* contact form (site type: contact)
/*********************************************************************************/

.qui-form > fieldset {
    border: none;
}

.qui-form legend {
    background: none;
    float: none !important; /* komischer bug in chrome */
    margin-bottom: 10px;
    padding: 0;
    width: auto;
}

.qui-formfield-body {
    padding: 0;
}

.qui-formfield label {
    display: block;
    margin-bottom: 0;
}

.qui-form input[type="submit"] {
    /*width: 100%;*/
    font-weight: bold;
}

/*********************************************************************************/
/* sitemap
/*********************************************************************************/

.qui-sitetypes-sitemap ul,
.qui-sitetypes-sitemap ol,
.qui-sitetypes-sitemap-block ul,
.qui-sitetypes-sitemap-block ol {
    list-style: none;
    padding-left: 0;
    padding-top: 10px;
    text-decoration: none;
}

.qui-sitetypes-sitemap ul a,
.qui-sitetypes-sitemap ol a,
.qui-sitetypes-sitemap-block ul a,
.qui-sitetypes-sitemap-block ol a {
    color: inherit;
    display: block;
    text-decoration: none;
}

.qui-sitetypes-sitemap ul a:hover,
.qui-sitetypes-sitemap ol a:hover,
.qui-sitetypes-sitemap-block ul a:hover,
.qui-sitetypes-sitemap-block ol a:hover,
.qui-sitetypes-sitemap-block th a:hover {
    text-decoration: underline;
}

.qui-sitetypes-sitemap ul li,
.qui-sitetypes-sitemap ol li,
.qui-sitetypes-sitemap-block ul li,
.qui-sitetypes-sitemap-block ol li {
    padding-left: 20px;
}

.qui-sitetypes-sitemap-block th {
    padding-left: 20px;
}

.qui-sitetypes-sitemap-block-category .control-background a {
    color: #fff;
    text-decoration: none;
}

.clear-fix:after {
    clear: both;
    content: '';
    display: block;
    float: none;
    font-size: 0;
    line-height: 0;
}

.qui-sitetypes-sitemap ul:first-child a:hover {
    text-decoration: underline;
}

@media all and (max-width: 767px) {
    .qui-sitetypes-sitemap-block-category {
        width: 100%;
    }
}
/* ... */

